fixed spacing

--- a/app/assets/stylesheets/components/_autocompletes.scss
+++ b/app/assets/stylesheets/components/_autocompletes.scss
@@ -23,7 +23,7 @@
 .Autocomplete-picked {
   @extend .FormInput-field;
   display: flex;
-  flexflow: row nowrap;
+  flex-flow: row nowrap;
   justify-content: space-between;
   >* {
     flex: 1;
